Fixed BookingController and updated tests